fix: Fix broken input bar when deleting search command without execution (#60)
* fix: Fix broken input bar when deleting search command without execution

* Update preload.ts

--- a/src/src-web/styles/index.scss
+++ b/src/src-web/styles/index.scss
@@ -330,6 +330,14 @@ span{
   }
 }
 
+.kui--bottom-input {
+  .repl-active {
+    .repl-input {
+      display: flex;
+    }
+  }
+}
+
 .repl-block {
   .repl-input {
     display: flex;
